--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
 
 /* Your CSS Code here. */
+.container-fluid {
+    width: 100%;
+    /* border: 2px solid red; */
+  }
+  .row {
+    display: flex;
+    justify-content: center;
+    /* border: 2px solid blue; */
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
